--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "archilogic-com/aframe-gblock",
   "scripts": {
     "start": "rollup -c tasks/rollup.config.js --watch& lite-server -c tasks/lite-server.config.js"
+    "start-api-server": "node server/index.js"
   },
   "license": "MIT",
   "author": {
@@ -30,7 +31,11 @@
     "3D model",
     "3d.io"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "cors": "^2.8.4",
+    "express": "^4.14.0",
+    "request": "^2.78.0"
+  },
   "devDependencies": {
     "lite-server": "^2.3.0",
     "rollup": "^0.49.2",
